--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,6 @@
         <jackson-annotations.version>2.9.3</jackson-annotations.version>
         <validation-api.version>2.0.1.Final</validation-api.version>
 
-        <swagger-codegen-maven-plugin.version>2.3.1.hb1</swagger-codegen-maven-plugin.version>
-
     </properties>
 
     <dependencies>
@@ -52,9 +50,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-codegen-maven-plugin</artifactId>
-                <version>${swagger-codegen-maven-plugin.version}</version>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>3.3.4</version>
 
                 <executions>
                     <execution>
@@ -63,7 +61,8 @@
                         </goals>
                         <configuration>
                             <inputSpec>${basedir}/src/main/resources/META-INF/resources/api.yaml</inputSpec>
-                            <language>jaxrs-spec</language>
+                            <generatorName>org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen</generatorName>
+                            <generateSupportingFiles>false</generateSupportingFiles>
                             <apiPackage>no.eidsa.swagger.example.api</apiPackage>
                             <configOptions>
                                 <interfaceOnly>true</interfaceOnly>
@@ -72,18 +71,6 @@
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
                             <modelNameSuffix>TO</modelNameSuffix>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>angular-typescript-api</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${basedir}/src/main/resources/META-INF/resources/api.yaml</inputSpec>
-                            <output>${project.build.directory}/client/</output>
-                            <language>typescript-angular</language>
-                            <configOptions></configOptions>
                         </configuration>
                     </execution>
                 </executions>
